[gd_scene load_steps=7 format=3 uid="uid://bu3lr7md4wmr0"]

[ext_resource type="Texture2D" uid="uid://dnmlq1wmg0t7x" path="res://Enemy/MortarEnemy/Ball/ball.png" id="1_8n2p4"]
[ext_resource type="Script" path="res://Enemy/MortarEnemy/Ball/GD_Ball.gd" id="1_awcsf"]
[ext_resource type="PackedScene" uid="uid://qyyepg4wdy5e" path="res://Enemy/MortarEnemy/Bomb/S_Bomb.tscn" id="2_0kqwl"]

[sub_resource type="Animation" id="Animation_4vqln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wkvoh"]
resource_name = "moving Ball"
length = 0.333338
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iomi5"]
_data = {
"RESET": SubResource("Animation_4vqln"),
"moving Ball": SubResource("Animation_wkvoh")
}

[node name="Ball" type="Node3D"]
script = ExtResource("1_awcsf")
bomb = ExtResource("2_0kqwl")

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1
texture_filter = 0
texture = ExtResource("1_8n2p4")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iomi5")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
